lib/src/compiler/tests/testdata/errors/84.out
error[E001]: syntax error
 --> line:3:10
  |
3 |   $a = { G0 }
  |          ^ expected bytes
  |